# QA_Automation

./: .gitignore  README.md
.github/workflows/: UI_parallel_test_demo_JavaScript.yml
api/java/: .gitignore  Makefile  README.md  pom.xml
github/: UI_parallel_test_demo_JavaScript.yml
mobile/: README.md  package-lock.json  package.json  wdio.conf.js
performance/: webTest.jmx
testData/: constants.json
web/javascript/: .gitignore  README.md  package-lock.json  package.json  test.js
web/javascript/api/: baseApi.js  cardGameApi.js
web/javascript/driverPlaywright/: basePage.js  domChallenge.js  home.js
web/javascript/driverSelenium/: home.js  (+2 more)
web/python/: .gitignore  Makefile  README.md  behave.ini  html.output  pyproject.toml  requirements.txt
web/python/cucumber/: Makefile  behave.ini  environment.py
web/python/cucumber/driver_playwright/: base_page.py  dom_challenge.py  home.py
web/python/cucumber/driver_playwright/amex_interview/: fill_job.py  job_post.py
web/python/cucumber/driver_selenium/: base_page.py  dom_challenge.py  home.py
web/python/cucumber/features/: amex_interview.feature  test.feature
web/python/cucumber/steps/: amex_interview_steps.py  playwright_steps.py  selenium_steps.py
web/python/cucumber/test_artifacts/report/: report.html  report.json
web/python/cucumber/test_artifacts/trace/: Playwright UI Test.trace
web/python/driverPlaywright/: basePage.py  home.py
web/python/testCucumber/config/: after.py  before.py
web/python/testCucumber/feature/: test.feature
web/python/testCucumber/feature/steps/: testSteps_playwright.py
(+51 files in other folders)
