[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["bromeooo <67499389+bromeooo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.41.2"
behave = "^1.2.6"
assertpy = "^1.1"
debugpy = "^1.8.0"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
